welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: value unary_! is not a member of Int
while (!biscuits*2!=caseOrange+1){
       ^